# sheet-scraper-automation

./: .gitignore  CHANGELOG.md  README.md  TODO.md  amazon.html  automation_tool_documentation.md  check_import.py  connect.py  logging.conf  logs.txt  pyproject.toml  pytest.ini  requirements.txt  sheet-scraper-as.json  sheet_scraper.py
.github/workflows/: scrape.yml
backup/: automation_core_backup.py
config/: selectors.json  settings.json
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  automation_tool_documentation.md  row_range_functionality.md
logs/: error_log.txt  logs.txt  price_update_log.txt
src/: connect.py  sheet_scraper.py
src/sheet_scraper/: __init__.py  __main__.py  captcha_solver.py  constants.py  proxy_manager.py  scraping_utils.py  sheet_scraper.py
src/sheet_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sheet_scraper/automation/: __init__.py  data_models.py  formatters.py  orchestrators.py  processors.py  scrapers.py  sheet_managers.py  stats.py
src/sheet_scraper/config/: __init__.py  config_manager.py  constants.py
src/sheet_scraper/core/: __init__.py  automation_core.py  product_processing.py  sheet_operations.py
src/sheet_scraper/infrastructure/: __init__.py  browser_manager.py  captcha_solver.py  connect.py  proxy_manager.py
src/sheet_scraper/logging/: automation_logging.py  geolocation_logger.py
src/sheet_scraper/logs_module/: __init__.py  automation_logging.py
src/sheet_scraper/utils/: __init__.py  data_processing.py  logs_module.py  pricing.py  sheets.py  web_scraping.py
tests/: test_sheet_scraper.py
web_ui/: README.md  app.py  start_ui.bat  start_ui.py
web_ui/static/css/: style.css
web_ui/static/js/: app.js
web_ui/templates/: index.html
